@@ -1,3 +1,7 @@
+2008-08-08  higepon  <higepon@users.sourceforge.jp>
+
+        * Makefile.am (test): Added R6RS tests.
+
 2008-08-07  higepon  <higepon@users.sourceforge.jp>
 
         * Implemented R6RS Conditions.
